feat: add Hero section with profile and copy email button
- Add Hero component with profile picture and info
- Add CopyEmail component with lucide copy icon
- Integrate astro-icon for icon management
- Update color scheme and add container layout
- Add profile images and copy icon asset

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "astro": "^5.17.1",
+    "astro-icon": "^1.1.5",
     "sharp": "^0.34.5"
   },
   "devDependencies": {
